<resources>
    <string name="app_name">SpeakOut</string>
    <string name="content_description_app_logo">App logo.</string>

    <!--  begin region activity login -->
    <string name="login_success_activity_login">Login Succeeded.</string>
    <string name="edittext_email_activity_login">Email address</string>
    <string name="edittext_password_activity_login">Password</string>
    <string name="textview_signup_activity_login">Not yet registered? Create an account.</string>
    <string name="textview_forgot_password_activity_login">Forgot password? Recover it.</string>
    <string name="button_login_activity_login">LOGIN</string>
    
    
    <!-- login errors -->
    <string name="invalid_email_format">Email with invalid format.</string>
    <string name="empty_email">Email field can not be empty.</string>
    <string name="empty_password">A password have to be provided.</string>
    <string name="invalid_credentials">Invalid Credentials.</string>
    <!--  end region activity login -->

</resources>
